# rust-web-dev-intro

./: .env
backend/: Cargo.toml
backend/migrations/: 20240707104133_foundation.sql  20240724082958_create_users.sql
backend/src/: main.rs
backend/src/in_memory/: mod.rs  routes.rs  state.rs
backend/src/postgres/: app_state.rs  auth.rs  jwt.rs  mod.rs  routes.rs  store.rs
frontend/: package.json
frontend/src/: App.vue  constants.ts
frontend/src/components/: Login.vue  Signup.vue  Todos.vue
frontend/src/composables/: useAuth.ts  useTodos.ts
