[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
dotenvy = "0.15.7"
password-auth = "0.3.0"
jwt-simple = "0.11.6"
base64 = "0.21.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
